# venvdoctor

./: .gitignore  README.md  pyproject.toml  temp.py
src/venvdoctor/: __init__.py  cli.py  formatters.py  formatters_duplicates.py  outdated.py  package_analyzer.py  scanner.py  tree.py
src/venvdoctor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
