[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "venvdoctor"
version = "0.2.0"
description = "Analyse Python virtual environments — size, health, deps, and more."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["virtualenv", "venv", "packages", "cli", "devtools"]

# No third-party runtime dependencies — stdlib only.
dependencies = []

[project.scripts]
venvdoctor = "venvdoctor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]